--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "prettier": "^3.3.3",
+    "rc-slider": "^11.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
