--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dayjs": "^1.11.11",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "prettier": "^3.3.3",
@@ -38,6 +40,7 @@
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "some-library": "^1.0.0",
+    "throttle": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
