--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL_DESIGN = https://techwiz5-design-gallery-service-dmbubrbdfdhndpap.eastasia-01.azurewebsites.net/
+REACT_APP_BASE_URL_DESIGN = https://techwiz5-design-gallery-service-dmbubrbdfdhndpap.eastasia-01.azurewebsites.net/api/v1/
 REACT_APP_BASE_URL_INVENTORY = https://techwiz5-inventory-service-ekb0h0d4c9gyfpby.eastasia-01.azurewebsites.net/api/v1/
 REACT_APP_BASE_URL_USER = https://techwiz5-user-service-hbereff9dmexc6er.eastasia-01.azurewebsites.net/api/v1/
 REACT_APP_BASE_URL_PRODUCT = https://techwiz-product-service-fpd5bedth9ckdgay.eastasia-01.azurewebsites.net/api/v1/
