--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-paginate": "^8.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
