--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
+    "bootstrap4-toggle": "^3.6.1",
     "chart.js": "^4.4.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.11",
