--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "prettier": "^3.3.3",
+    "quill": "^2.0.2",
     "rc-slider": "^11.1.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
