--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "reactstrap": "^9.2.2",
     "some-library": "^1.0.0",
     "throttle": "^1.0.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.2",
